# ccrl-live-notifier

./: .gitignore  Cargo.toml  README.md  config.json  config.json5
src/: ccrl_pgn.rs  ccrllive.rs  cli.rs  config.rs  discord.rs  log.rs  main.rs  notify.rs  state.rs
