[package]
name = "ccrl-live-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.2", features = ["derive"] }
pgn-reader = "0.26.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
serde_json5 = "0.2.1"
